--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
-    //restdocs
+    // restdocs
     asciidoctorExt "org.springframework.restdocs:spring-restdocs-asciidoctor"
     testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc"
 }
@@ -67,6 +67,7 @@ tasks.named('test') {
 
 test {
     outputs.dir snippetsDir
+    systemProperty 'user.timezone', 'Asia/Seoul'
 }
 
 asciidoctor {
