[#9] Feat 상품 수정 기능 구현

--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,7 @@ jar {
     enabled = false
 }
 
-task copyPrivate(type: Copy) {
+tasks.register('copyPrivate', Copy) {
     copy {
         from './PTCMR_yml'
         include "*.yml"
